--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,102 +1,67 @@
-name: Docker Build and Push
+# 工作流名称
+name: Build and Push Docker Image
 
+# 触发条件：推送到main分支、打任意标签时执行
 on:
   push:
-    branches:
-      - main
-      - develop
-    tags:
-      - 'v*.*.*'
-  pull_request:
-    branches:
-      - main
+    branches: [ "main" ]
+    tags: [ "v*" ] # 匹配v1.0、v2.1.3等标签格式
 
-env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
-
+# 定义任务
 jobs:
   build-and-push:
+    # 运行环境（GitHub 提供的虚拟机）
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      # 授予GHCR推送权限（如需推送到GHCR必须配置）
       packages: write
+      contents: read
 
     steps:
-      - name: 检出代码
+      # 步骤1：检出代码（把仓库代码拉到虚拟机）
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: 设置 Docker Buildx
+      # 步骤2：设置Docker Buildx（增强版构建工具，支持多架构、缓存）
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: 登录到 GitHub Container Registry
-        if: github.event_name != 'pull_request'
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: 登录到 Docker Hub
-        if: github.event_name != 'pull_request' && secrets.DOCKERHUB_USERNAME != ''
+      # 步骤3：登录Docker Hub（如需推送到Docker Hub则保留，否则注释/删除）
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
+      
+      # 步骤4：登录GHCR（如需推送到GHCR则保留，否则注释/删除）
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }} # 当前GitHub用户名
+          password: ${{ secrets.GITHUB_TOKEN }} # GitHub自动生成的令牌
 
-      - name: 提取 Docker 元数据
+      # 步骤5：提取镜像标签（根据触发条件自动生成标签，如latest、v1.0）
+      - name: Extract metadata for Docker
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          # 镜像名称（替换成你的：Docker Hub填用户名/仓库名，GHCR填ghcr.io/用户名/仓库名）
+          images: |
+            hahaguo/weiqi-game # Docker Hub 镜像名
+            ghcr.io/${{ github.repository_owner }}/weiqi-game # GHCR 镜像名
+          # 标签规则：main分支打latest，标签推送打对应tag，同时加commit SHA
           tags: |
             type=ref,event=branch
-            type=ref,event=pr
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}
-            type=sha,prefix={{branch}}-
-            type=raw,value=latest,enable={{is_default_branch}}
+            type=ref,event=tag
+            # type=sha,format=short
 
-      - name: 构建并推送 Docker 镜像
+      # 步骤6：构建并推送镜像
+      - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
-          context: .
-          platforms: linux/amd64,linux/arm64
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-          build-args: |
-            BUILD_DATE=${{ github.event.head_commit.timestamp }}
-            VCS_REF=${{ github.sha }}
-            VERSION=${{ steps.meta.outputs.version }}
-
-      - name: Docker 镜像扫描
-        if: github.event_name != 'pull_request'
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.meta.outputs.version }}
-          format: 'sarif'
-          output: 'trivy-results.sarif'
-
-      - name: 上传扫描结果
-        if: github.event_name != 'pull_request'
-        uses: github/codeql-action/upload-sarif@v3
-        with:
-          sarif_file: 'trivy-results.sarif'
-
-      - name: 镜像信息
-        run: |
-          echo "### 🐳 Docker 镜像构建成功 ✅" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**镜像标签:**" >> $GITHUB_STEP_SUMMARY
-          echo '```' >> $GITHUB_STEP_SUMMARY
-          echo "${{ steps.meta.outputs.tags }}" >> $GITHUB_STEP_SUMMARY
-          echo '```' >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**拉取命令:**" >> $GITHUB_STEP_SUMMARY
-          echo '```bash' >> $GITHUB_STEP_SUMMARY
-          echo "docker pull ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest" >> $GITHUB_STEP_SUMMARY
-          echo '```' >> $GITHUB_STEP_SUMMARY
+          context: . # 构建上下文（项目根目录）
+          push: true # 推送到镜像仓库（false仅构建不推送）
+          tags: ${{ steps.meta.outputs.tags }} # 使用步骤5生成的标签
+          cache-from: type=gha # 缓存构建层，加速后续构建
+          cache-to: type=gha,mode=max # 保存缓存到GitHub
